--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ pkcs11-helper-1.07.tar.bz2
 /pkcs11-helper-1.09.tar.bz2
 /pkcs11-helper-1.10.tar.bz2
 /pkcs11-helper-1.11.tar.bz2
+/pkcs11-helper-1.22.tar.bz2
